Fixed internal links.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="odin-recipes/lasagna.html"><h2>Juli's Lasagna</h2></a>
+    <a href="./lasagna.html"><h2>Juli's Lasagna</h2></a>
 </body>
 </html>
