--- a/lasagna.html
+++ b/lasagna.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="index.html"><h2>Home</h2></a>
     <h1>Juli's Lasagna</h1>
     <img>
     <ul>
